fix(site) make footer's z-index less than back-top's z-index

--- a/site/src/theme/static/footer.less
+++ b/site/src/theme/static/footer.less
@@ -7,7 +7,7 @@
   font-size: 14px;
   background-color: #000;
   position: relative;
-  z-index: 100;
+  z-index: 8;
   margin-left: -1px;
   color: rgba(255, 255, 255, 0.65);
 
